# CoMa3_projekt

aktuell/: main.cpp
aktuell/Musiktafel_mit_MCV/: CMakeLists.txt  main.cpp  musiktafelfenster.cpp  musiktafelfenster.h  tonfolgecontroller.cpp  tonfolgecontroller.h  tonfolgemodell.cpp  tonfolgemodell.h  tonfolgewidget.cpp  tonfolgewidget.h
code/: Code_readme.txt  main.cpp
code/Coma3_Projekt/: CMakeLists.txt  Musiktafel_control.h  Musiktafel_model.h  Musiktafel_view.h  main.cpp
code/aktuell/: main.cpp  musiktafel_control.h  musiktafel_view.h
code/build-Coma3_Projekt-Desktop_x86_windows_msvc2022_pe_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  Coma3_Projekt.ilk  build.ninja  cmake_install.cmake
code/build-Coma3_Projekt-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.qt/: QtDeploySupport.cmake
code/build-Coma3_Projekt-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.qtc_clangd/: compile_commands.json
code/build-testspace-Desktop_x86_windows_msvc2022_pe_64bit-Debug/: .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
code/build-testspace-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.qt/: QtDeploySupport.cmake
code/build-testspace-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.qtc_clangd/: compile_commands.json
code/temp_projekt/alte versionen/20.11.23/: Musiktafel.cpp  main.cpp
code/temp_projekt/build-musiktafel_temp-Desktop_x86_windows_msvc2022_pe_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  musiktafel_temp.ilk
code/temp_projekt/build-musiktafel_temp-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.qt/: QtDeploySupport.cmake
code/temp_projekt/build-musiktafel_temp-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.qtc_clangd/: compile_commands.json
code/temp_projekt/build-musiktafel_temp-Desktop_x86_windows_msvc2022_pe_64bit-Debug/musiktafel_temp_autogen/: deps
code/temp_projekt/build-musiktafel_temp-Desktop_x86_windows_msvc2022_pe_64bit-Debug/musiktafel_temp_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
code/temp_projekt/musiktafel_temp/: CMakeLists.txt  Musiktafel.cpp  main.cpp
code/testspace/: CMakeLists.txt  mvc_muster.cpp  mvc_muster.h
code/view&control/: main.cpp  musiktafel_control.h  musiktafel_view.h
infos/Idee_Labyrinth/: links.txt
(+454 files in other folders)
